--- a/spec/cassettes/organization.yml
+++ b/spec/cassettes/organization.yml
@@ -267,4 +267,239 @@ http_interactions:
       string: ! '{"MasasUUID": "73fbd032-26dc-11e3-ad11-0401041e8a01"}'
     http_version: 
   recorded_at: Thu, 26 Sep 2013 18:50:18 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais111","title":"President","language":"en","email":"email_8@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:32 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "2671ad82-27a4-11e3-992c-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:37 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"My 123","lastName":"Backup111","title":"President","language":"en","email":"email_9@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:32 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "26b21e3a-27a4-11e3-8618-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:38 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Someone 1234","lastName":"Important111","title":"President","language":"en","email":"email_10@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:33 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "26f23a2e-27a4-11e3-ad11-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:38 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/organizations/
+    body:
+      encoding: UTF-8
+      string: ! '{"OrgName":"Awesome organization 111","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"2671ad82-27a4-11e3-992c-0401041e8a01","SecondaryContactURI":"26b21e3a-27a4-11e3-8618-0401041e8a01","ExecutiveContactURI":"26f23a2e-27a4-11e3-ad11-0401041e8a01","AdminAccount":{"UserName":"jmaltais111","ContactURI":"2671ad82-27a4-11e3-992c-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 409
+      message: Conflict
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:33 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '122'
+      Connection:
+      - close
+      Content-Type:
+      - text/html; charset=UTF-8
+    body:
+      encoding: US-ASCII
+      string: The entry uid=jmaltais111,ou=accounts,dc=ois,dc=cloop,dc=co cannot be
+        added because an entry with that name already exists
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:39 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais222","title":"President","language":"en","email":"email_11@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:34 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "2774c804-27a4-11e3-93ec-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:39 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"My","lastName":"Backup222","title":"President","language":"en","email":"email_12@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:34 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "27b3b0f0-27a4-11e3-9413-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:39 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/organizations/
+    body:
+      encoding: UTF-8
+      string: ! '{"OrgName":"Awesome organization 222","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"2774c804-27a4-11e3-93ec-0401041e8a01","SecondaryContactURI":"27b3b0f0-27a4-11e3-9413-0401041e8a01","ExecutiveContactURI":"27b3b0f0-27a4-11e3-9413-0401041e8a01","AdminAccount":{"UserName":"jmaltais222","ContactURI":"2774c804-27a4-11e3-93ec-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 409
+      message: Conflict
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:34 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '122'
+      Connection:
+      - close
+      Content-Type:
+      - text/html; charset=UTF-8
+    body:
+      encoding: US-ASCII
+      string: The entry uid=jmaltais222,ou=accounts,dc=ois,dc=cloop,dc=co cannot be
+        added because an entry with that name already exists
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:40 GMT
 recorded_with: VCR 2.2.5
