--- a/spec/cassettes/primary_admin.yml
+++ b/spec/cassettes/primary_admin.yml
@@ -66,4 +66,70 @@ http_interactions:
       string: ! '{"MasasUUID": "743f1dce-26dc-11e3-8618-0401041e8a01"}'
     http_version: 
   recorded_at: Thu, 26 Sep 2013 18:50:18 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"email_7@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:31 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "26285c4a-27a4-11e3-9788-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:37 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais444","title":"President","language":"en","email":"email_30@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Fri, 27 Sep 2013 18:39:35 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "28624d40-27a4-11e3-bdca-0401041e8a01"}'
+    http_version: 
+  recorded_at: Fri, 27 Sep 2013 18:39:41 GMT
 recorded_with: VCR 2.2.5
