--- a/spec/cassettes/organization.yml
+++ b/spec/cassettes/organization.yml
@@ -502,4 +502,239 @@ http_interactions:
         added because an entry with that name already exists
     http_version: 
   recorded_at: Fri, 27 Sep 2013 18:39:40 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais111","title":"President","language":"en","email":"jevin@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:38:38 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "e3524e6c-31a8-11e3-bc51-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:38:40 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"My 123","lastName":"Backup111","title":"President","language":"en","email":"someoneelse@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:38:39 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "e3a7e3e0-31a8-11e3-b463-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:38:41 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Someone 1234","lastName":"Important111","title":"President","language":"en","email":"important@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:38:39 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "e3fef2d4-31a8-11e3-ac17-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:38:42 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/organizations/
+    body:
+      encoding: UTF-8
+      string: ! '{"OrgName":"Awesome organization 111","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"e3524e6c-31a8-11e3-bc51-0401041e8a01","SecondaryContactURI":"e3a7e3e0-31a8-11e3-b463-0401041e8a01","ExecutiveContactURI":"e3fef2d4-31a8-11e3-ac17-0401041e8a01","AdminAccount":{"UserName":"jmaltais111","ContactURI":"e3524e6c-31a8-11e3-bc51-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 409
+      message: Conflict
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:38:40 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '122'
+      Connection:
+      - close
+      Content-Type:
+      - text/html; charset=UTF-8
+    body:
+      encoding: US-ASCII
+      string: The entry uid=jmaltais111,ou=accounts,dc=ois,dc=cloop,dc=co cannot be
+        added because an entry with that name already exists
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:38:42 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais222","title":"President","language":"en","email":"jevin@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:39:04 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "f26ec5e2-31a8-11e3-95d5-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:39:06 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"My","lastName":"Backup222","title":"President","language":"en","email":"someoneelse@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:39:04 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "f2c51a64-31a8-11e3-bf61-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:39:06 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/organizations/
+    body:
+      encoding: UTF-8
+      string: ! '{"OrgName":"Awesome organization 222","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"f26ec5e2-31a8-11e3-95d5-0401041e8a01","SecondaryContactURI":"f2c51a64-31a8-11e3-bf61-0401041e8a01","ExecutiveContactURI":"f2c51a64-31a8-11e3-bf61-0401041e8a01","AdminAccount":{"UserName":"jmaltais222","ContactURI":"f26ec5e2-31a8-11e3-95d5-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 409
+      message: Conflict
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 12:39:05 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '122'
+      Connection:
+      - close
+      Content-Type:
+      - text/html; charset=UTF-8
+    body:
+      encoding: US-ASCII
+      string: The entry uid=jmaltais222,ou=accounts,dc=ois,dc=cloop,dc=co cannot be
+        added because an entry with that name already exists
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 12:39:07 GMT
 recorded_with: VCR 2.2.5
