--- a/spec/cassettes/primary_admin.yml
+++ b/spec/cassettes/primary_admin.yml
@@ -132,4 +132,70 @@ http_interactions:
       string: ! '{"MasasUUID": "28624d40-27a4-11e3-bdca-0401041e8a01"}'
     http_version: 
   recorded_at: Fri, 27 Sep 2013 18:39:41 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"jevin@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 14:52:02 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "85daad84-31bb-11e3-b425-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 14:52:08 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais444","title":"President","language":"en","email":"jevin@quickjack.ca","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Oct 2013 14:52:03 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "865d636e-31bb-11e3-bc51-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 10 Oct 2013 14:52:09 GMT
 recorded_with: VCR 2.2.5
